--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -8,14 +8,19 @@
 <!-- Modal -->
 <modal id="change-password" title="@Localizer["Change Password"].Value" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-tenant="@tenantUrlSegment" method="post" role="form" novalidate>
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-tenant="@tenantUrlSegment" method="post" novalidate>
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="mb-3">
                 <label asp-for="CurrentPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="CurrentPassword" autofocus class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                    <span class="input-group-text"
+                          role="button"
+                          tabindex="0"
+                          style="cursor: pointer"
+                          onclick="Site.ShowHidePassword(this)"
+                          onkeypress="Site.ShowHidePassword(this)">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
@@ -25,7 +30,12 @@
                 <label asp-for="NewPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="NewPassword" class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                    <span class="input-group-text" 
+                          role="button"
+                          tabindex="0"
+                          style="cursor: pointer"
+                          onclick="Site.ShowHidePassword(this)"
+                          onkeypress="Site.ShowHidePassword(this)">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
@@ -38,7 +48,12 @@
                 <label asp-for="ConfirmPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                    <span class="input-group-text"
+                          role="button"
+                          tabindex="0"
+                          style="cursor: pointer"
+                          onclick="Site.ShowHidePassword(this)"
+                          onkeypress="Site.ShowHidePassword(this)">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
