--- a/League/Views/Account/CreateAccount.cshtml
+++ b/League/Views/Account/CreateAccount.cshtml
@@ -58,12 +58,12 @@
         <div class="mb-3">
             <div class="mt-2">
                 <img id="CaptchaImage" style="vertical-align: bottom; display:inline" src="@Url.Action(nameof(League.Controllers.Captcha.Index), nameof(League.Controllers.Captcha))@("?guid=" + Guid.NewGuid())" alt="Captcha" title="" />
-                <label role="button" tabindex="0" class="d-inline"
-                       onclick="javascript:if (document.images) document.images.CaptchaImage.src = '@Url.Action(nameof(Captcha.Index), nameof(Captcha))?new=1&amp;time=' + new Date().getTime();"
-                       onkeypress="javascript:if (document.images) document.images.CaptchaImage.src = '@Url.Action(nameof(Captcha.Index), nameof(Captcha))?new=1&amp;time=' + new Date().getTime();"
+                <button type="button" tabindex="0" class="d-inline btn btn-link"
+                       onclick="javascript:if (document.images) document.images.CaptchaImage.src = '@Url.Action(nameof(Captcha.Index), nameof(Captcha))?new=1&amp;time=' + new Date().getTime(); return false;"
+                       onkeyup="javascript:if (document.images && event.keyCode !== 9) document.images.CaptchaImage.src = '@Url.Action(nameof(Captcha.Index), nameof(Captcha))?new=1&amp;time=' + new Date().getTime(); return false;"
                        style="cursor: pointer">
                     <i class="fa fa-sync-alt fa-2x" style="margin: 0 5px 0 5px;" title="@Localizer["Reload"]"></i>
-                </label><br />
+                </button><br />
             </div>
             <label asp-for="Captcha" class="form-label mt-2"></label>
             <div class="input-group">
