--- a/League/Views/Account/Register.cshtml
+++ b/League/Views/Account/Register.cshtml
@@ -35,14 +35,14 @@
             <label asp-for="Password" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
-                <span class="input-group-text" 
-                      role="button"
-                      tabindex="0"
-                      style="cursor: pointer"
-                      onclick="Site.ShowHidePassword(this)"
-                      onkeypress="Site.ShowHidePassword(this)">
+                <button class="input-group-text" 
+                        type="button"
+                        tabindex="0"
+                        style="cursor: pointer"
+                        onclick="Site.ShowHidePassword(this)"
+                        onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                     <i class="fas fa-eye"></i>
-                </span>
+                </button>
             </div>
             <span asp-validation-for="Password" class="text-danger"></span>
             <small id="passwordHelpBlock" class="form-text text-muted">
@@ -53,14 +53,14 @@
             <label asp-for="ConfirmPassword" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
-                <span class="input-group-text" 
-                      role="button"
-                      tabindex="0"
-                      style="cursor: pointer"
-                      onclick="Site.ShowHidePassword(this)"
-                      onkeypress="Site.ShowHidePassword(this)">
+                <button class="input-group-text" 
+                        type="button"
+                        tabindex="0"
+                        style="cursor: pointer"
+                        onclick="Site.ShowHidePassword(this)"
+                        onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                     <i class="fas fa-eye"></i>
-                </span>
+                </button>
             </div>
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
