--- a/League/Views/Account/SignIn.cshtml
+++ b/League/Views/Account/SignIn.cshtml
@@ -59,14 +59,14 @@
             <label asp-for="Password" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="Password" class="form-control" required="required" type="text" />@* js will change type to "password" *@
-                    <span class="input-group-text" 
-                          role="button"
-                          tabindex="0"
-                          style="cursor: pointer"
-                          onclick="Site.ShowHidePassword(this)"
-                          onkeypress="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
