--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -15,14 +15,14 @@
                 <label asp-for="CurrentPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="CurrentPassword" autofocus class="form-control" />
-                    <span class="input-group-text"
-                          role="button"
-                          tabindex="0"
-                          style="cursor: pointer"
-                          onclick="Site.ShowHidePassword(this)"
-                          onkeypress="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <span asp-validation-for="CurrentPassword" class="text-danger"></span>
             </div>
@@ -30,14 +30,14 @@
                 <label asp-for="NewPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="NewPassword" class="form-control" />
-                    <span class="input-group-text" 
-                          role="button"
-                          tabindex="0"
-                          style="cursor: pointer"
-                          onclick="Site.ShowHidePassword(this)"
-                          onkeypress="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <small id="passwordHelpBlock" class="form-text text-muted">
                     <partial name="@League.Views.ViewNames.Shared._passwordRules" />
@@ -48,14 +48,14 @@
                 <label asp-for="ConfirmPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    <span class="input-group-text"
-                          role="button"
-                          tabindex="0"
-                          style="cursor: pointer"
-                          onclick="Site.ShowHidePassword(this)"
-                          onkeypress="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
