--- a/League/Views/Account/ResetPassword.cshtml
+++ b/League/Views/Account/ResetPassword.cshtml
@@ -11,7 +11,7 @@
 <div>
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr />
-    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" asp-route-tenant="@tenantUrlSegment" method="post" class="col-md-8 col-sm-10 col-12 ps-0" role="form" novalidate>
+    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" asp-route-tenant="@tenantUrlSegment" method="post" class="col-md-8 col-sm-10 col-12 ps-0" novalidate>
         <site-validation-summary show="All">
             <b>@Localizer["Input has some issues"]:</b>
         </site-validation-summary>
@@ -30,9 +30,14 @@
             <label asp-for="Password" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
-                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                <button class="input-group-text"
+                        type="button"
+                        tabindex="0"
+                        style="cursor: pointer"
+                        onclick="Site.ShowHidePassword(this)"
+                        onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                     <i class="fas fa-eye"></i>
-                </span>
+                </button>
             </div>
             <span asp-validation-for="Password" class="text-danger"></span>
             <small id="passwordHelpBlock" class="form-text text-muted">
@@ -43,9 +48,14 @@
             <label asp-for="ConfirmPassword" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
-                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                <button class="input-group-text"
+                        type="button"
+                        tabindex="0"
+                        style="cursor: pointer"
+                        onclick="Site.ShowHidePassword(this)"
+                        onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                     <i class="fas fa-eye"></i>
-                </span>
+                </button>
             </div>
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
