--- a/League/Views/Account/SignIn.cshtml
+++ b/League/Views/Account/SignIn.cshtml
@@ -18,8 +18,8 @@
     {
     <hr/>
     <div class="col-md-8 col-sm-10 col-12 ps-0">
-        <h3 class="h3">@Localizer["Sign-in using a social network account"]</h3>
-            <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ExternalSignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" role="form" novalidate>
+        <h3 id="sign-in-social" class="h3">@Localizer["Sign-in using a social network account"]</h3>
+            <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ExternalSignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" aria-labelledby="sign-in-social" novalidate>
             @if (ViewData["Form"]?.ToString() == "SocialMedia")
             {
                 <site-validation-summary show="All">
@@ -37,8 +37,8 @@
 }
     <hr />
     <div class="col-md-8 col-sm-10 col-12 ps-0">
-        <h3 class="h3">@Localizer["Sign-in with your user account credentials"]</h3>
-    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.SignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" role="form" class="ps-0" novalidate>
+        <h3 id="sign-in-account" class="h3">@Localizer["Sign-in with your user account credentials"]</h3>
+        <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.SignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="ps-0" aria-labelledby="sign-in-account" novalidate>
             @if (ViewData["Form"]?.ToString() != "SocialMedia")
             {
                 <site-validation-summary show="All">
@@ -59,9 +59,14 @@
             <label asp-for="Password" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="Password" class="form-control" required="required" type="text" />@* js will change type to "password" *@
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
