--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -8,16 +8,21 @@
 <!-- Modal -->
 <modal id="change-password" title="@Localizer["Change Password"].Value" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-tenant="@tenantUrlSegment" method="post" role="form" novalidate>
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-tenant="@tenantUrlSegment" method="post" novalidate>
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="mb-3">
                 <label asp-for="CurrentPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="CurrentPassword" autofocus class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <span asp-validation-for="CurrentPassword" class="text-danger"></span>
             </div>
@@ -25,9 +30,14 @@
                 <label asp-for="NewPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="NewPassword" class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <small id="passwordHelpBlock" class="form-text text-muted">
                     <partial name="@League.Views.ViewNames.Shared._passwordRules" />
@@ -38,9 +48,14 @@
                 <label asp-for="ConfirmPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword(this)">
+                    <button class="input-group-text" 
+                            type="button"
+                            tabindex="0"
+                            style="cursor: pointer"
+                            onclick="Site.ShowHidePassword(this)"
+                            onkeyup="if(event.keyCode !== 9) Site.ShowHidePassword(this);">
                         <i class="fas fa-eye"></i>
-                    </span>
+                    </button>
                 </div>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
