--- a/League.Demo/Views/TenantContent/OtherOrg/Home_Index.cshtml
+++ b/League.Demo/Views/TenantContent/OtherOrg/Home_Index.cshtml
@@ -1,7 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Index";
+﻿@using League.Helpers
+@using TournamentManager.MultiTenancy
+@inject ITenantContext TenantContext
+@{
+    ViewData.Title(TenantContext.OrganizationContext.Name);
+    ViewData.Description(TenantContext.OrganizationContext.Description);
 }
 <div class="mb-0 pb-1">
-    <h2 class="h2">OtherOrg Index</h2>
+    <h2 class="h2">@(TenantContext.OrganizationContext.ShortName) Index</h2>
     Content goes here...
 </div>
