--- a/League.Demo/Views/TenantContent/OtherOrg/Info_RuleOfGame.cshtml
+++ b/League.Demo/Views/TenantContent/OtherOrg/Info_RuleOfGame.cshtml
@@ -1,7 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Index";
+﻿@using League.Helpers
+@using TournamentManager.MultiTenancy
+@inject ITenantContext TenantContext
+@{
+    ViewData.Title(string.Concat("Rule of Game - ", TenantContext.OrganizationContext.ShortName));
+    ViewData.Description(TenantContext.OrganizationContext.Description);
 }
 <div class="mb-0 pb-1">
-    <h2 class="h2">OtherOrg Rule of Game</h2>
+    <h2 class="h2">@(TenantContext.OrganizationContext.ShortName) - Rule of Game</h2>
     Content goes here...
 </div>
