--- a/League/Views/Match/ReportSheet.cshtml
+++ b/League/Views/Match/ReportSheet.cshtml
@@ -49,13 +49,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewData["Title"]</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <style type="text/css">
-        @* 
-            <!-- Bootstrap 5 (compared to Bootstrap 4) no longer includes custom CSS for printing -->
-            <!-- This is a copy of the Bootstrap 4 print styles -->
-            <!-- Source: https://github.com/coliff/bootstrap-print-css and https://christianoliff.com/blog/bootstrap-5-print-stylesheet/ --> 
-        *@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap 5 (compared to Bootstrap 4) no longer includes custom CSS for printing. This is a copy of the Bootstrap 4 print styles. Source: https://github.com/coliff/bootstrap-print-css and https://christianoliff.com/blog/bootstrap-5-print-stylesheet/ -->
+    <style>
         @@media print {
             *,
             *::before,
@@ -125,16 +121,16 @@
             }
         }
     </style>
-    <style type="text/css">
-        @* <!-- Custom styles for League ReportSheet --> *@
+    <!-- Custom styles for League ReportSheet -->
+    <style>
         @@media print {
             @@page {
                 size: 210mm 297mm;
-                margin: 0; /* removes header and footer when printing with browsers, for automatic pdf generation --no-pdf-header-footer is required for Chromium browsers */
+                margin: 0; /* removes header and footer when printing with browsers, for automatic pdf generation --no-pdf-header-footer is required for browser PDF generation */
             }
 
             div.container {
-                padding: 5mm 8mm 0 8mm !important
+                padding: 5mm 8mm 0 8mm !important;
             }
         }
 
@@ -214,7 +210,7 @@
     </style>
     @if(numberOfSets <= 3)
     {
-        <style type="text/css">
+        <style>
             .team-circle-size  {
                 width: 35px !important;
                 height: 35px !important;
@@ -226,7 +222,7 @@
     }
     else
     {
-        <style type="text/css">
+        <style>
             .team-circle-size  {
                 width: 35px !important;
                 height: 35px !important;
