Improve accessibility of html elements
* Replace anchor with button for Google Analytics opt-out link in `Privacy.de.cshtml` to enhance accessibility and user interaction.
* Remove `role="form"` attribute from form elements in multiple `.cshtml` files to adhere to modern HTML5 standards.
* Replace `div` with `button` for team filters in `Fixtures.cshtml` and `Results.cshtml` to improve accessibility and interaction.
* Update `Fixtures.cshtml` to use `asp-action` and `asp-controller` attributes instead of inline JavaScript for printing match report sheets, enhancing maintainability and readability.
* Added CSS rules in `Fixtures.cshtml` and `Results.cshtml` to style new button elements for team filters.

--- a/League/Areas/Admin/Views/Impersonation/Index.cshtml
+++ b/League/Areas/Admin/Views/Impersonation/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="mb-0 pb-1">
     <h2 class="h2">@ViewData["Title"]</h2>
     <div>
-        <form asp-controller="@nameof(League.Areas.Admin.Controllers.Impersonation)" asp-action="@nameof(League.Areas.Admin.Controllers.Impersonation.Index)" asp-route-tenant="@tenantRoute" method="get" role="form" novalidate>
+        <form asp-controller="@nameof(League.Areas.Admin.Controllers.Impersonation)" asp-action="@nameof(League.Areas.Admin.Controllers.Impersonation.Index)" asp-route-tenant="@tenantRoute" method="get" novalidate>
             <div class="mb-3">
                 <label for="search" class="form-label">@Localizer["Find by email, first/last/nick name"]</label>
                 <input id="search" name="search" required="required" class="form-control" value="@search" aria-describedby="searchHelpBlock" />
