--- a/League/Views/Match/EditFixture.cshtml
+++ b/League/Views/Match/EditFixture.cshtml
@@ -15,7 +15,7 @@
 <div class="mb-0 pb-1">
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr />
-    <form asp-controller="@nameof(Match)" asp-action="@nameof(Match.EditFixture)" asp-route-tenant="@tenantUrlSegment" method="post" role="form" novalidate>
+    <form asp-controller="@nameof(Match)" asp-action="@nameof(Match.EditFixture)" asp-route-tenant="@tenantUrlSegment" method="post" novalidate>
         <site-validation-summary show="All" warning="@Model.IsWarning"></site-validation-summary>
         <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />@* needed for unobtrusive validation *@
         <input hidden="hidden" asp-for="Id" />
