--- a/League/Views/Team/_ChangeVenueModalPartial.cshtml
+++ b/League/Views/Team/_ChangeVenueModalPartial.cshtml
@@ -27,7 +27,7 @@
                 }
             </div>
             <div class="mb-4">
-                <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.SelectVenue)" asp-route-tenant="@tenantUrlSegment" asp-route-tid="@Model.TeamId" method="get" role="form" novalidate>
+                <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.SelectVenue)" asp-route-tenant="@tenantUrlSegment" asp-route-tid="@Model.TeamId" method="get" novalidate>
                     <button type="button" site-ajax-submit class="btn btn-primary d-block w-100">@Localizer["Select another venue"]</button>
                 </form>
             </div>
