--- a/League/Views/Venue/EditVenue.cshtml
+++ b/League/Views/Venue/EditVenue.cshtml
@@ -14,7 +14,7 @@
     <h2 id="@tableDescriptionId" class="h2">@ViewData["Title"]</h2>
     <hr />
     @* Form with only 1 input field can be submitted with enter key. So we have to prevent default submit behavior and trigger a click on saveBtn *@
-    <form asp-controller="@nameof(Venue)" asp-action="@(Model.Venue.IsNew ? nameof(Venue.Create) : nameof(Venue.Edit))" asp-route-tenant="@tenantUrlSegment" method="post" role="form" novalidate>
+    <form asp-controller="@nameof(Venue)" asp-action="@(Model.Venue.IsNew ? nameof(Venue.Create) : nameof(Venue.Edit))" asp-route-tenant="@tenantUrlSegment" method="post" novalidate>
         <site-validation-summary show="All" warning="@Model.IsWarning" unique-error-text="true"></site-validation-summary>
         <input asp-for="TeamId" type="hidden" />
         <input asp-for="Hash" type="hidden" />
