Optimize collection access
* Replace `First()` and `FirstOrDefault()` with index-based access (`[0]`) or `Find()` to enhance readability and performance.
* Change `Any()` to `Exists()` and `All()` to `TrueForAll()` for consistency and potential performance gains.
* Update lambda expressions to use pattern matching for null and property checks.
* Modify string comparisons to use single quotes for characters.
* Replace `Last()` with index-based access (`[^1]`).

--- a/League/Views/Map/Index.cshtml
+++ b/League/Views/Map/Index.cshtml
@@ -2,7 +2,7 @@
 @model League.Models.MapViewModels.MapModel
 @inject IViewLocalizer Localizer
 @{ ViewData["Title"] = Localizer["Venues"].Value + " - " + Model.Tournament?.Name;}
-        @if (!Model.Venues.Any(v => v is { Latitude: not null, Longitude: not null }))
+        @if (!Model.Venues.Exists(v => v is { Latitude: not null, Longitude: not null }))
         {
             <div class="row">
                 <div class="col-12 pb-2">
@@ -21,7 +21,7 @@
         <h2 class="h2">@ViewData["Title"]</h2>
         @if (Model.IsSingleValue)
         {
-            var venue = Model.Venues.First();
+            var venue = Model.Venues[0];
             <h3 class="h3"><i class="fas fa-map-marker-alt"></i> @venue.VenueName</h3>
             <hr class="mb-4" />
         }
