--- a/League/Views/Ranking/Table.cshtml
+++ b/League/Views/Ranking/Table.cshtml
@@ -26,7 +26,7 @@
         .GroupBy(m => m.RoundName, (key, m) => new { RoundName = key, RoundId = m.First()
             .RoundId, RoundDescription = m.First().RoundDescription, RoundTypeDescription = m.First().RoundTypeDescription })
             .OrderBy(m => m.RoundName).ToList();
-    var useRecentRoundCookie = !(Model.ActiveRoundId.HasValue && rounds.Any(r => r.RoundId == Model.ActiveRoundId));
+    var useRecentRoundCookie = !(Model.ActiveRoundId.HasValue && rounds.Exists(r => r.RoundId == Model.ActiveRoundId));
     if (useRecentRoundCookie) { activeRoundId = rounds.FirstOrDefault()?.RoundId ?? 0; }
 }
 @functions {
