--- a/League/Views/Team/MyTeam.cshtml
+++ b/League/Views/Team/MyTeam.cshtml
@@ -44,7 +44,7 @@
             var teamPhotoInfo = Model.TeamPhotoStaticFile!.GetUriInfo(teamVenueInfo.TeamId);
             var zonedLastModified = Model.TimeZoneConverter.ToZonedTime(teamPhotoInfo.Date)!;
 
-            <div class="tab-pane@{if (Model.TeamUserRoundInfos.Any(tvr => tvr.TeamId == Model.ActiveTeamId)){<text> show active</text>}}" id="tab-@(teamVenueInfo.TeamId)" role="tabpanel">
+            <div class="tab-pane@{if (Model.TeamUserRoundInfos.Exists(tvr => tvr.TeamId == Model.ActiveTeamId)){<text> show active</text>}}" id="tab-@(teamVenueInfo.TeamId)" role="tabpanel">
                 <div class="card pb-2 mb-3">
                     <div class="card-header px-2 py-1">
                         <div class="d-flex justify-content-between align-items-baseline">
