Enhance security for links, cookies, and regex operations
* Add `rel="noopener"` to various anchor tags across multiple files to prevent access to `window.opener`.
* Add `Secure` and `HttpOnly` attributes to cookies
* Introduced `RegexTimeout` constant in `TimeOnlyModelBinder.cs` and `TimeSpanModelBinder.cs`, and updated `Regex.Replace` calls

--- a/League.Demo/Views/Home/AboutLeague.cshtml
+++ b/League.Demo/Views/Home/AboutLeague.cshtml
@@ -44,7 +44,7 @@
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Optimized for mobile devices: Comfortable operation on smartphones, tablets or desktop PCs</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Localizable for language, region and time zone</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Runs on Windows und Linux</li>
-                <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>The platform software is Open Source and published on <a href="https://github.com/axuno/Volleyball-League" class="link" target="_blank">GitHub</a>.</li>
+                <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>The platform software is Open Source and published on <a href="https://github.com/axuno/Volleyball-League" class="link" target="_blank" rel="noopener">GitHub</a>.</li>
             </ul>
         </article>
         <article class="col-4 col-sm-4">
