--- a/League.Demo/Views/Home/AboutLeague.de.cshtml
+++ b/League.Demo/Views/Home/AboutLeague.de.cshtml
@@ -44,7 +44,7 @@
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Optimiert für mobile Geräte: Komfortable Bedienung per Smartphone, Tablet oder Desktop PC</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Lokalisierbar für Sprache, Region und Zeitzone</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Lauffähig auf Windows und Linux</li>
-                <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Die Software der Plattform ist Open Source und veröffentlicht auf <a href="https://github.com/axuno/Volleyball-League" class="link" target="_blank">GitHub</a>.</li>
+                <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Die Software der Plattform ist Open Source und veröffentlicht auf <a href="https://github.com/axuno/Volleyball-League" class="link" target="_blank" rel="noopener">GitHub</a>.</li>
             </ul>
         </article>
         <article class="col-2 col-sm-4">
